update order, fix bugs. Before deploy